social post overflow fix

--- a/src/scss/components/_social-grid.scss
+++ b/src/scss/components/_social-grid.scss
@@ -73,7 +73,6 @@
 			position: relative;
 			aspect-ratio: 1/1;
 			background-color: color('black');
-			overflow: hidden;
 			cursor: pointer;
 			margin-bottom: spacing(sm);
 
